--- a/style/main.css
+++ b/style/main.css
@@ -1,19 +1,32 @@
-@import url(fonts/clear-sans.css);
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 html, body {
   margin: 0;
   padding: 0;
-  background: #faf8ef;
-  color: #776e65;
-  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px; }
+  color: #ffffff;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-size: 18px;
+  text-shadow: 2px 2px 2px black;
+}
 
 body {
+  background: url('img/2048background.png');
+  background-size: cover;
   margin: 80px 0; }
+
+.heading {
+  display: flex;
+  align-items: flex-end; 
+}
 
 .heading:after {
   content: "";
   display: block;
   clear: both; }
+
+.logo {
+  width: 60%;
+  margin: 0px 0px;
+}
 
 h1.title {
   font-size: 80px;
@@ -48,59 +61,63 @@ h1.title {
   100% {
     top: -50px;
     opacity: 0; } }
-
-.scores-container {
-  float: right;
-  text-align: right; }
-
-.score-container, .best-container {
-  position: relative;
-  display: inline-block;
-  background: #bbada0;
-  padding: 15px 25px;
-  font-size: 25px;
-  height: 25px;
-  line-height: 47px;
-  font-weight: bold;
-  border-radius: 3px;
-  color: white;
-  margin-top: 8px;
-  text-align: center; }
-  .score-container:after, .best-container:after {
-    position: absolute;
-    width: 100%;
-    top: 10px;
-    left: 0;
-    text-transform: uppercase;
-    font-size: 13px;
-    line-height: 13px;
-    text-align: center;
-    color: #eee4da; }
-  .score-container .score-addition, .best-container .score-addition {
-    position: absolute;
-    right: 30px;
-    color: red;
-    font-size: 25px;
-    line-height: 25px;
-    font-weight: bold;
-    color: rgba(119, 110, 101, 0.9);
-    z-index: 100;
-    -webkit-animation: move-up 600ms ease-in;
-    -moz-animation: move-up 600ms ease-in;
-    animation: move-up 600ms ease-in;
-    -webkit-animation-fill-mode: both;
-    -moz-animation-fill-mode: both;
-    animation-fill-mode: both; }
-
-.score-container:after {
-  content: "Score"; }
-
-.best-container:after {
-  content: "Best"; }
+    .scores-container {
+      float: right;
+      text-align: right; }
+    
+      .best-container {
+        margin-left: 20px;
+      }
+    
+    .score-container, .best-container {
+      flex: 1;
+      position: relative;
+      display: inline-block;
+      background: black;
+      border: solid 2px #fff;
+      padding: 15px 25px;
+      font-size: 25px;
+      font-family: "Ubuntu", "Helvetica Neue", Arial, sans-serif;
+      font-weight: bold;
+      height: 25px;
+      line-height: 47px;
+      border-radius: 3px;
+      color: white;
+      margin-top: 8px;
+      text-align: center; }
+      .score-container:after, .best-container:after {
+        position: absolute;
+        width: 100%;
+        top: 10px;
+        left: 0;
+        text-transform: uppercase;
+        font-size: 13px;
+        line-height: 13px;
+        text-align: center;
+        color: #eee4da; }
+      .score-container .score-addition, .best-container .score-addition {
+        position: absolute;
+        right: 30px;
+        color: red;
+        font-size: 25px;
+        line-height: 25px;
+        font-weight: bold;
+        color: rgba(119, 110, 101, 0.9);
+        z-index: 100;
+        -webkit-animation: move-up 600ms ease-in;
+        -moz-animation: move-up 600ms ease-in;
+        animation: move-up 600ms ease-in;
+        -webkit-animation-fill-mode: both;
+        -moz-animation-fill-mode: both;
+        animation-fill-mode: both; }
+    
+    .score-container:after {
+      content: "Score"; }
+    
+    .best-container:after {
+      content: "Best"; }
 
 p {
-  margin-top: 0;
-  margin-bottom: 10px;
   line-height: 1.65; }
 
 a {
@@ -154,6 +171,9 @@ hr {
   background: #bbada0;
   border-radius: 6px;
   width: 716px;
+  background: linear-gradient(180deg, #c4268f 6%, rgb(191, 110, 216) 93%);
+  border-radius:5px;
+  box-shadow: 0px 0px 0px 10px #ffffff, 0px 0px 10px 10px #000;
   height: 642px;
   -ms-touch-action: none;
   -webkit-box-sizing: border-box;
@@ -186,11 +206,11 @@ hr {
       margin-top: 59px; }
     .game-container .game-message a {
       display: inline-block;
-      background: #8f7a66;
+      background: #000000;
       border-radius: 3px;
       padding: 0 20px;
       text-decoration: none;
-      color: #f9f6f2;
+      color: #ffffff;
       height: 40px;
       line-height: 42px;
       margin-left: 9px; }
@@ -333,21 +353,17 @@ hr {
   .tile .tile-inner {
     border-radius: 50%;
     background: #eee4da;
-    text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 55px; }
-  .tile.tile-0 .tile-inner {
-    background: #eeeeee;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    font-size: 0px; }
   .tile.tile-1 .tile-inner {
-    background: #eaeaea;
+    background: #d4d4d4;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    background: #d8d8d8;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
-    background: #ede0c8;
+    background: #d1b47e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
@@ -365,73 +381,54 @@ hr {
     color: #f9f6f2;
     background: #edcf72;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-    font-size: 45px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-128 .tile-inner {
-        font-size: 25px; } }
+}
+
   .tile.tile-256 .tile-inner {
     color: #f9f6f2;
     background: #edcc61;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-    font-size: 45px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-256 .tile-inner {
-        font-size: 25px; } }
+}
+
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
     background: #edc850;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-    font-size: 45px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-512 .tile-inner {
-        font-size: 25px; } }
+ }
+
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
     background: #edc53f;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-    font-size: 35px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-1024 .tile-inner {
-        font-size: 15px; } }
+ }
+ 
   .tile.tile-2048 .tile-inner {
     color: #f9f6f2;
     background: #edc22e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-    font-size: 35px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-2048 .tile-inner {
-        font-size: 15px; } }
+}
+
   .tile.tile-4096 .tile-inner {
     color: #f9f6f2;
     background: #efa020;
     box-shadow: 0 0 30px 10px rgba(243, 195, 100, 0.62013), inset 0 0 0 1px rgba(255, 255, 255, 0.38001);
-    font-size: 35px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-4096 .tile-inner {
-        font-size: 15px; } }
+ }
+
   .tile.tile-8192 .tile-inner {
     color: #f9f6f2;
     background: #f27511;
     box-shadow: 0 0 30px 10px rgba(250, 128, 50, 0.68314), inset 0 0 0 1px rgba(255, 255, 255, 0.42299);
-    font-size: 35px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-8192 .tile-inner {
-        font-size: 15px; } }
+}
+
   .tile.tile-16384 .tile-inner {
     color: #f9f6f2;
     background: #ff3000;
     box-shadow: 0 0 30px 10px rgba(255, 64, 0, 0.75310), inset 0 0 0 1px rgba(255, 255, 255, 0.50919);
-    font-size: 30px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-16384 .tile-inner {
-        font-size: 10px; } }
+ }
+
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    font-size: 30px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-super .tile-inner {
-        font-size: 10px; } }
+ }
 
 @-webkit-keyframes appear {
   0% {
@@ -538,6 +535,7 @@ hr {
   animation-fill-mode: backwards; }
 
 .game-intro {
+  text-align: center;
   margin-bottom: 0; }
 
 .game-explanation {
@@ -556,4 +554,103 @@ hr {
     transform: scale(1.5);
     margin: 20px;
   }
+}
+
+.gameover-gif {
+  width: 300px;
+}
+
+.empty-cell {
+  background: #00000000;
+}
+
+.tile.tile-1 .tile-inner {
+  background-image: url(img/1.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: 65%
+}
+.tile.tile-2 .tile-inner {
+  background-image: url(img/2.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: 65%;
+}
+.tile.tile-4 .tile-inner {
+  background-image: url(img/4.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+   background-size: 75%;
+
+}
+.tile.tile-8 .tile-inner {
+  background-image: url(img/8.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+   background-size: 80%;
+
+}
+.tile.tile-16 .tile-inner {
+  background-image: url(img/16.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: 90%;
+
+}
+.tile.tile-32 .tile-inner {
+  background-image: url(img/32.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: 80%; 
+
+}
+.tile.tile-64 .tile-inner {
+  background-image: url(img/64.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: 75%;
+
+}
+.tile.tile-128 .tile-inner {
+  background-image: url(img/128.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+   background-size: 70%;
+
+}
+.tile.tile-256 .tile-inner {
+  background-image: url(img/256.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: 80%;
+
+}
+.tile.tile-512 .tile-inner {
+  background-image: url(img/512.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: contain;
+
+}
+.tile.tile-1024 .tile-inner {
+  background-image: url(img/1024.png);
+  background-repeat: no-repeat; 
+  background-position: center;
+   background-size: 70%;
+
+}
+.tile.tile-2048 .tile-inner {
+  color:#00000000;
+  background-image: url(img/2048.png);
+  background-repeat: no-repeat;
+  background-position: center;
+   background-size: 75%;
+
+}
+.tile.tile-4096 .tile-inner {
+  background-image: url(img/4096.png);
+  background-repeat: no-repeat;
+  background-position: center;
+   background-size: 65%;
+
 }
